Projektdetailsaeite sexuell erregend gestaltet

--- a/IvA/Views/Projekte/Delete.cshtml
+++ b/IvA/Views/Projekte/Delete.cshtml
@@ -52,6 +52,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="ProjekteId" />
         <input type="submit" value="Projekt löschen" class="btn btn-danger" /> |
-        <a asp-action="Index">Zurück zur Projektübersicht</a>
+        <a asp-action="Index" class="btn btn-dark" style="color: #ffa400">Zurück zur Projektübersicht</a>
     </form>
 </div>
