--- a/IvA/Views/Projekte/PaketErstellen.cshtml
+++ b/IvA/Views/Projekte/PaketErstellen.cshtml
@@ -46,7 +46,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Zurück zur Projektübersicht</a>
+    <a asp-action="Index" class="btn btn-dark" style="color: #ffa400">Zurück zur Projektübersicht</a>
 </div>
 
 @section Scripts {
