--- a/IvA/Views/Projekte/PaketLöschenGet.cshtml
+++ b/IvA/Views/Projekte/PaketLöschenGet.cshtml
@@ -44,6 +44,6 @@
     <form asp-action="PaketLöschenGet">
         <input type="hidden" asp-for="ArbeitsPaketId" />
         <input type="submit" value="Arbeitspaket löschen" class="btn btn-danger" /> |
-        <a asp-action="Index">Zurück zur Projektübersicht</a>
+        <a asp-action="Index" class="btn btn-dark" style="color: #ffa400">Zurück zur Projektübersicht</a>
     </form>
 </div>
