--- a/IvA/Views/Projekte/PaketZeit.cshtml
+++ b/IvA/Views/Projekte/PaketZeit.cshtml
@@ -56,7 +56,7 @@
 </div>
 
 <div>  
-    <a asp-action="PaketDetails" asp-route-id="@Model.ArbeitsPaketId" class="btn btn-info" >Zurück zu den Paketdetails</a>
+    <a asp-action="PaketDetails" asp-route-id="@Model.ArbeitsPaketId" class="btn btn-dark" style="color: #ffa400" >Zurück zu den Paketdetails</a>
 </div>
 
 @section Scripts {
