Admin und Owner Rechte erweitert, zweiter View für das Dashboard

--- a/IvA/Views/Dashboard/Index.cshtml
+++ b/IvA/Views/Dashboard/Index.cshtml
@@ -5,20 +5,31 @@
 }
 
 <h1>Mein Dashboard</h1>
-<h2>Demnächst zu erledigen<h2>
+
+<div class="dropdown">
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Ansicht wählen
+    </button>
+    <div class="dropdown-menu" aria-labelledby="Ansicht">
+        <a class="dropdown-item active" asp-controller="Dashboard" asp-action="Index">Cards</a>
+        <a class="dropdown-item" asp-controller="Dashboard" asp-action="List" >Liste</a>
+    </div>
+</div>
+
+<h2>Demnächst zu erledigen</h2>
 <div class="card-columns">
     @foreach (var item in Model)
     {
         DateTime now = DateTime.Now;
-        @if (item.Frist <= now.AddDays(3)) 
+        @if (item.Frist <= now.AddDays(3))
         {
-        <div class="card bg-secondary">
-            <div class="card-header text-center" style="font-size: 20px;"><a asp-action="Projekte" asp-route-id="@item.ArbeitsPaketId">@item.PaketName</a></div>
-            <div class="card-body text-center">
-                <p class ="card-text" style="font-size: 15px;">@item.Beschreibung</p>
-                <p class="card-text" style="font-size: 20px;">@item.Frist</p>
+            <div class="card bg-secondary">
+                <div class="card-header text-center" style="font-size: 20px;"><a asp-action="Projekte" asp-route-id="@item.ArbeitsPaketId">@item.PaketName</a></div>
+                <div class="card-body text-center">
+                    <p class="card-text" style="font-size: 15px;">@item.Beschreibung</p>
+                    <p class="card-text" style="font-size: 20px;">@item.Frist</p>
+                </div>
             </div>
-        </div>
         }
     }
 </div>
@@ -171,3 +182,6 @@
 </table>
 
 
+@functions{
+    
+}
