Den Abstand zwischen den Nachrichten, dem Input Feld und dem Button erhöhen.

--- a/IvA/Views/Shared/_Layout.cshtml
+++ b/IvA/Views/Shared/_Layout.cshtml
@@ -77,13 +77,14 @@
                             <div id="min_message" class="close_message"><strong>x</strong></div>
                         </div>
                         <div class="messages" id="scrolldown">
-                        </div>
-                        <div class="input-group mb-3">
-                            <input id="messageInputChat" type="text" placeholder="Schreibe etwas">
+                        </div>                       
+                        <div class="input-group mb-3" id="inputg">
+                            <input id="messageInputChat" type="text" class="form-control" placeholder="Schreibe etwas">
                             <div class="input-group-append">
-                                <button class="btn btn-primary" type="button" id="sendButtonMessage">Senden</button>
+                                <button class="btn btn-outline-primary" type="button"  id="sendButtonMessage">Button</button>
                             </div>
                         </div>
+
                     </div>
                 </div>
             </div>
