--- a/IvA/Views/Shared/_Layout.cshtml
+++ b/IvA/Views/Shared/_Layout.cshtml
@@ -81,7 +81,7 @@
                         <div class="input-group mb-3" id="inputg">
                             <input id="messageInputChat" type="text" class="form-control" placeholder="Schreibe etwas">
                             <div class="input-group-append">
-                                <button class="btn btn-outline-primary" type="button"  id="sendButtonMessage">Button</button>
+                                <button class="btn btn-outline-primary" type="button"  id="sendButtonMessage">Send</button>
                             </div>
                         </div>
 
