--- a/IvA/Views/Shared/_LoginPartial.cshtml
+++ b/IvA/Views/Shared/_LoginPartial.cshtml
@@ -2,7 +2,7 @@
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
-<ul class="navbar-nav flex-grow-1" style="padding-left: 25px">
+<ul class="navbar-nav flex-grow-1" style="padding-left: 400px; padding-right: 25px;">
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
