--- a/IvA/Views/Projekte/Index.cshtml
+++ b/IvA/Views/Projekte/Index.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Projektübersicht";
 }
-<h2 align="center" class="display-4">Projektübersicht</h2>
+<h2 align="center" class="display-4" style="color: #ffa400"><b>Projektübersicht</b></h2>
 <h2 style="padding-top:25px">
     Behalten sie die Übersicht über ihre Projekte. <br />
     Erstellen und Verwalten sie flexibel Projekte und Arbeitspakete.
