--- a/IvA/Views/Projekte/Details.cshtml
+++ b/IvA/Views/Projekte/Details.cshtml
@@ -4,51 +4,54 @@
 
 @{ ViewData["Title"] = "Projektdetails"; }
 
-<h1 style="margin-bottom:20px">Projekt: @Model.Project.Projektname</h1>
+<h1 style="margin-bottom:20px ; color: #ffa400"><b>Projekt: @Model.Project.Projektname</b></h1>
 
+<div  class="PaketInfo">
+    <h4 style="margin-bottom:25px ; color: #ffa400 ; padding-bottom:15px ; padding-top:10px ; padding-left: 10px">Übersicht über die Projektdetails</h4>
+    <div style="padding-left:10px">
+        <dl class="row">
+            <dt class="col-sm-2 FirstLetter">
+                Projektowner
+            </dt>
+            <dd class="col-sm-4">
+                @Model.Project.Projektersteller
+            </dd>
+            <dt class="col-sm-2 FirstLetter">
+                Erstellt am
+            </dt>
+            <dd class="col-sm-4">
+                @Model.Project.ErstelltAm
+            </dd>
+            <dt class="col-sm-2 FirstLetter">
+                Status
+            </dt>
+            <dd class="col-sm-4">
+                @Model.Project.Status
+            </dd>
+            <dt class="col-sm-2 FirstLetter">
+                Deadline
+            </dt>
+            <dd class="col-sm-4">
+                @Model.Project.Deadline
+            </dd>
+            <dt class="col-sm-2 FirstLetter">
+                Beschreibung
+            </dt>
+            <dd class="col-sm-4">
+                @Model.Project.Beschreibung
+            </dd>
+        </dl>
+    </div>
+</div>
 <div>
-    <h4 style="margin-bottom:25px">Übersicht über die Projektdetails</h4>
-    <dl class="row">
-        <dt class="col-sm-2">
-            Projektowner
-        </dt>
-        <dd class="col-sm-4">
-            @Model.Project.Projektersteller
-        </dd>
-        <dt class="col-sm-2">
-            Erstellt am
-        </dt>
-        <dd class="col-sm-4">
-            @Model.Project.ErstelltAm
-        </dd>
-        <dt class="col-sm-2">
-            Status
-        </dt>
-        <dd class="col-sm-4">
-            @Model.Project.Status
-        </dd>
-        <dt class="col-sm-2">
-            Deadline
-        </dt>
-        <dd class="col-sm-4">
-            @Model.Project.Deadline
-        </dd>
-        <dt class="col-sm-2">
-            Beschreibung
-        </dt>
-        <dd class="col-sm-4">
-            @Model.Project.Beschreibung
-        </dd>
-
-    </dl>
-
     <div style="margin-bottom:20px; margin-top:25px">
         <a class="btn btn-orange" asp-action="Edit" asp-route-id="@Model.Project.ProjekteId"><b>Anpassen</b></a>
         <a class="btn btn-orange" asp-action="PaketErstellen" asp-route-id="@Model.Project.ProjekteId"><b>Arbeitspaket erstellen</b></a>
         <a class="btn btn-danger" asp-action="Delete" asp-route-id="@Model.Project.ProjekteId"><b>Projekt löschen</b></a>
     </div>
 
-    <p style="margin-top:75px ; color: #ffa400"> Fortschritt der Arbeitspakete:
+    <p style="margin-top:75px ; color: #ffa400">
+        Fortschritt der Arbeitspakete:
         <div class="progress" style="margin-bottom:25px">
             <div class="progress-bar bg-danger" role="progressbar" style="width: @Model.ProjectProgress[0]" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
             <div class="progress-bar bg-warning" role="progressbar" style="width: @Model.ProjectProgress[1]" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
@@ -60,7 +63,7 @@
 <div class="card-deck" style="margin-bottom:100px">
     <div class="card bg-secondary">
         <div class="card-body">
-            <h4 class="card-title" style="color: #ffa400">To Do</h4>
+            <h4 class="card-title" style="color: #ffa400"><b>To Do</b></h4>
             <ul class="list-group list-group-flush">
                 @foreach (var item in Model.Packages)
                 {
@@ -76,7 +79,7 @@
     </div>
     <div class="card bg-secondary">
         <div class="card-body">
-            <h4 class="card-title" style="color: #ffa400">In Bearbeitung</h4>
+            <h4 class="card-title" style="color: #ffa400"><b>In Bearbeitung</b></h4>
             <ul class="list-group list-group-flush">
                 @foreach (var item in Model.Packages)
                 {
@@ -92,7 +95,7 @@
     </div>
     <div class="card bg-secondary">
         <div class="card-body">
-            <h4 class="card-title" style="color: #ffa400">Fertig</h4>
+            <h4 class="card-title" style="color: #ffa400"><b>Fertig</b></h4>
             <ul class="list-group list-group-flush">
                 @foreach (var item in Model.Packages)
                 {
@@ -112,7 +115,7 @@
 </p>
 <a asp-action="AddUser" asp-route-id="@Model.Project.ProjekteId" asp-controller="Projekte" class="btn btn-secondary" style="color: #ffa400 ; margin-bottom:25px ; margin-top:25px">Nutzer hinzufügen</a>
 
-<table class="table bg-table ">
+<table class="table bg-table">
     <thead class="bg-table thead-dark">
         <tr>
             <th scope="col">Name</th>
