--- a/IvA/Views/Projekte/PaketAnpassen.cshtml
+++ b/IvA/Views/Projekte/PaketAnpassen.cshtml
@@ -64,7 +64,7 @@
 </div>
 
 <div>
-    <a asp-action="Index" class="btn btn-dark" style="color: #ffa400">Zurück zur Projektübersicht</a>
+    <a asp-action="PaketDetails" asp-route-id="@Model.ArbeitsPaketId" class="btn btn-dark" style="color: #ffa400">Zurück zu den Paketdetails</a>
 </div>
 
 @section Scripts {
