--- a/IvA/Views/Projekte/PaketDetails.cshtml
+++ b/IvA/Views/Projekte/PaketDetails.cshtml
@@ -6,7 +6,7 @@
 <br />
 
 <div class="PaketInfo">
-    <h4 style="color: #ffa400 ; padding-top:10px ; padding-left:10px"> Arbeitspaket: @Html.DisplayFor(model => model.Package.PaketName)</h4>
+    <h4 class="FirstLetter" style="padding-top:10px ; padding-left:10px"> Arbeitspaket: @Html.DisplayFor(model => model.Package.PaketName)</h4>
     <div>
         <dl class="row" style="padding-bottom:15px ; padding-top:10px ; padding-left: 10px">
             <dt class="col-sm-2 FirstLetter">
