--- a/IvA/Views/Projekte/Details.cshtml
+++ b/IvA/Views/Projekte/Details.cshtml
@@ -7,7 +7,7 @@
 <h1 style="margin-bottom:20px ; color: #ffa400"><b>Projekt: @Model.Project.Projektname</b></h1>
 
 <div  class="PaketInfo">
-    <h4 style="margin-bottom:25px ; color: #ffa400 ; padding-bottom:15px ; padding-top:10px ; padding-left: 10px">Übersicht über die Projektdetails</h4>
+    <h4 style="margin-bottom:25px ; padding-bottom:15px ; padding-top:10px ; padding-left: 10px" class="FirstLetter">Übersicht über die Projektdetails</h4>
     <div style="padding-left:10px">
         <dl class="row">
             <dt class="col-sm-2 FirstLetter">
@@ -61,7 +61,7 @@
 
 </div>
 <div class="card-deck" style="margin-bottom:100px">
-    <div class="card bg-secondary">
+    <div class="card" style="background-color:rgb(52, 58, 64)">
         <div class="card-body">
             <h4 class="card-title" style="color: #ffa400"><b>To Do</b></h4>
             <ul class="list-group list-group-flush">
@@ -77,7 +77,7 @@
             </ul>
         </div>
     </div>
-    <div class="card bg-secondary">
+    <div class="card" style="background-color:rgb(52, 58, 64)">
         <div class="card-body">
             <h4 class="card-title" style="color: #ffa400"><b>In Bearbeitung</b></h4>
             <ul class="list-group list-group-flush">
@@ -93,7 +93,7 @@
             </ul>
         </div>
     </div>
-    <div class="card bg-secondary">
+    <div class="card" style="background-color:rgb(52, 58, 64)">
         <div class="card-body">
             <h4 class="card-title" style="color: #ffa400"><b>Fertig</b></h4>
             <ul class="list-group list-group-flush">
