--- a/IvA/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/IvA/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -14,10 +14,10 @@
             <strong>Löschen der Daten hat die Löschung des Accounts zur Folge</strong>
         </p>
         <form id="download-data" asp-page="DownloadPersonalData" method="post" class="form-group">
-            <button class="btn btn-primary" type="submit">Download</button>
+            <button class="btn btn-dark" style="color:#ffa400" type="submit">Download</button>
         </form>
         <p>
-            <a id="delete" asp-page="DeletePersonalData" class="btn btn-primary">Löschen</a>
+            <a id="delete" asp-page="DeletePersonalData" class="btn btn-dark" style="color:#ffa400">Löschen</a>
         </p>
     </div>
 </div>
