--- a/IvA/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/IvA/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="shortcut icon" href="~/favicon.ico" />
 </head>
-<h1>Accountverwaltung</h1>
+<h1 style="color: #ffa400"><b>Accountverwaltung</b></h1>
 
 <div>
-    <h4>Verwalten Sie ihre Daten</h4>
+    <h4 style="margin-bottom:20px">Verwalten Sie ihre Daten</h4>
     <hr />
     <div class="row">
         <div class="col-md-3">
