--- a/IvA/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/IvA/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -26,7 +26,7 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Passwort ändern</button>
+            <button type="submit" class="btn btn-dark" style="color:#ffa400">Passwort ändern</button>
         </form>
     </div>
 </div>
