--- a/IvA/Areas/Identity/Pages/Account/Manage/Email.cshtml
+++ b/IvA/Areas/Identity/Pages/Account/Manage/Email.cshtml
@@ -33,7 +33,7 @@
                 <input asp-for="Input.NewEmail" class="form-control" />
                 <span asp-validation-for="Input.NewEmail" class="text-danger"></span>
             </div>
-            <button id="change-email-button" type="submit" asp-page-handler="ChangeEmail" class="btn btn-primary">Bestätigen</button>
+            <button id="change-email-button" type="submit" asp-page-handler="ChangeEmail" class="btn btn-dark" style="color:#ffa400">Bestätigen</button>
         </form>
     </div>
 </div>
