--- a/IvA/Views/Admin/ListProjects.cshtml
+++ b/IvA/Views/Admin/ListProjects.cshtml
@@ -3,30 +3,30 @@
     ViewData["Title"] = "ListProjects";
 }
 
-<h1>ListProjects</h1>
+<h1 style="color: #ffa400 ; margin-bottom:20px"><b>Projektübersicht für Administratoren</b></h1>
 
-<table class="table">
-    <thead>
+<table class="table bg-table" style="table-layout:fixed">
+    <thead class="bg-table thead-dark">
         <tr>
-            <th>
+            <th scope="col" class="FirstLetter">
                 @Html.DisplayNameFor(model => model.Projektname)
             </th>
-            <th>
+            <th scope="col" class="FirstLetter">
                 @Html.DisplayNameFor(model => model.Projektersteller)
             </th>
-            <th>
+            <th scope="col" class="FirstLetter">
                 @Html.DisplayNameFor(model => model.ErstelltAm)
             </th>
-            <th>
+            <th scope="col" class="FirstLetter" width="25%">
                 @Html.DisplayNameFor(model => model.Beschreibung)
             </th>
-            <th>
+            <th scope="col" class="FirstLetter">
                 @Html.DisplayNameFor(model => model.Deadline)
             </th>
-            <th>
+            <th scope="col" class="FirstLetter">
                 @Html.DisplayNameFor(model => model.Status)
             </th>
-            <th>
+            <th scope="col" class="FirstLetter">
                 Optionen
             </th>
         </tr>
@@ -54,7 +54,7 @@
                 @Html.DisplayFor(modelItem => item.Status)
             </td>
             <td>
-                <a asp-action="Delete" asp-controller="Projekte" asp-route-id="@item.ProjekteId">Löschen</a>
+                <a asp-action="Delete" asp-controller="Projekte" asp-route-id="@item.ProjekteId" class="btn btn-danger">Löschen</a>
             </td>
         </tr>
         }
