--- a/IvA/Views/Shared/_Layout.cshtml
+++ b/IvA/Views/Shared/_Layout.cshtml
@@ -32,9 +32,9 @@
                                 <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Adminpanel
                                 </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Admin" asp-action="ListUsers">Nutzerverwaltung</a>
-                                    <a class="dropdown-item" asp-area="" asp-controller="Admin" asp-action="ListProjects">Projekteverwaltung</a>
+                                <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item bg-secondary" style="color:#ffa400" asp-area="" asp-controller="Admin" asp-action="ListUsers">Nutzerverwaltung</a>
+                                    <a class="dropdown-item bg-secondary" style="color:#ffa400" asp-area="" asp-controller="Admin" asp-action="ListProjects">Projekteverwaltung</a>
                                 </div>
                             </li>
                         }
@@ -53,10 +53,10 @@
         <div style="margin-top:100px">
 
             <div class="systemChat align-baseline transparente" id="user_head">
-                <div class="columna" id="user_content">
+                <div class="columna " style="background-color: #b4b4b4" id="user_content">
                     <div class="row" id="xxx">
                         <div id="user_title_bar">
-                            <span class="col-sm-9 text-primary"><strong id="farbe">Online Users</strong></span>
+                            <span class="col-sm-9 text-primary" style="color: #ffa400"><strong id="farbe">Online Users</strong></span>
                             <div id="user_min_button"><i class="fa fa-plus-square"></i></div>
                             <div id="min_user" class="close_user2"><strong>Open</strong></div>
                         </div>
@@ -64,7 +64,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="columna" id="message_content">
+                <div class="columna" style="background-color: #b4b4b4" id="message_content">
                     <div class="row">
                         <div id="chat_title_bar">
                             <span class="col-sm-9 text-primary" id="textziel"><strong><small>CHAT</small></strong></span>
@@ -76,7 +76,7 @@
                         <div class="input-group mb-3">
                             <input id="messageInputChat" type="text" placeholder="Schreibe etwas">
                             <div class="input-group-append">
-                                <button class="btn btn-primary" type="button" id="sendButtonMessage">Senden</button>
+                                <button class="btn btn-orange" type="button" id="sendButtonMessage"><b>Senden</b></button>
                             </div>
                         </div>
                     </div>
