--- a/IvA/Views/Dashboard/List.cshtml
+++ b/IvA/Views/Dashboard/List.cshtml
@@ -13,6 +13,7 @@
     <div class="dropdown-menu" aria-labelledby="Ansicht">
         <a class="dropdown-item" asp-controller="Dashboard" asp-action="Index">Cards</a>
         <a class="dropdown-item active" asp-controller="Dashboard" asp-action="List">Liste</a>
+        <a class="dropdown-item" asp-controller="Dashboard" asp-action="Done">Erledigte To Do</a>
     </div>
 </div>
 
