--- a/IvA/Views/Dashboard/Done.cshtml
+++ b/IvA/Views/Dashboard/Done.cshtml
@@ -13,12 +13,10 @@
     <div class="dropdown-menu" aria-labelledby="Ansicht">
         <a class="dropdown-item" asp-controller="Dashboard" asp-action="Index">Cards</a>
         <a class="dropdown-item" asp-controller="Dashboard" asp-action="List">Liste</a>
-        <a class="dropdown-item active" asp-controller="Dashboard" asp-action="Done">Erledigte To Do</a>
+        <a class="dropdown-item active" asp-controller="Dashboard" asp-action="done">Erledigte To Do</a>
     </div>
 </div>
 
-<h2>TEST</h2>
-<!--
 <h2>Erledigte To Do</h2>
 <div>
 @foreach (var item in Model)
